--- a/views/admin.layouts/header.ejs
+++ b/views/admin.layouts/header.ejs
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
    />
+   <link rel="stylesheet" href="/styles/base.css" />
    <link rel="stylesheet" href="/styles/dashboard.css" />
    <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
