--- a/views/admin/upload.ejs
+++ b/views/admin/upload.ejs
@@ -86,7 +86,7 @@
                            class="form-control"
                            type="Nhập diện tích"
                            name="acreage"
-                           placeholder="Nhập diện tích (m2)"
+                           placeholder="Nhập diện tích (m&sup2)"
                            id=""
                         />
                      </div>
