--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -34,14 +34,18 @@
 <div class="alert__success">
    <i class="las la-check-circle"></i>
    <div class="alert__content">
-      <h6>Thành Công!</h6>
-      <h7><%= alert%></h7>
+      <div class="success__first">
+         <p>Thành Công!</p>
+      </div>
+      <div class="success__second">
+         <p><%= alert%></p>
+      </div>
    </div>
 </div>
 <% } %>
 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-<script type="text/javascript">
+<!-- <script type="text/javascript">
    jQuery(document).ready(function ($) {
       $('.alert__success').delay(3000).fadeOut('slow');
    });
-</script>
+</script> -->
