--- a/public/styles/analysis.css
+++ b/public/styles/analysis.css
@@ -35,18 +35,13 @@
    margin-bottom: 10px;
 }
 .input-box label {
-   font-size: 14px;
+   font-size: 18px;
    font-weight: 400;
    padding: 5px 0;
    display: flex;
    justify-content: center;
 }
-.input-box input {
-   font-size: 16px;
-   font-weight: 600;
-   margin-top: 10px;
-   margin-left: 110px;
-}
+
 .input-box select {
    margin: 10px 0;
    padding: 5px 4px;
@@ -79,6 +74,22 @@
    display: inline-block;
    width: auto;
 }
+.price {
+   margin-top: 10px;
+}
+.price span {
+   font-size: 16px;
+}
+.price input {
+   padding: 7px;
+   border: 1px solid #000;
+   font-size: 16px;
+   font-weight: 600;
+   width: 115px;
+   border-radius: 20px;
+}
+.vnh__year {
+}
 
 .table {
    border-collapse: collapse;
@@ -94,6 +105,7 @@
 
 .kkkk {
    background: #499fcb;
+   text-align: center;
 }
 
 .table td,
