--- a/views/components/apartment.ejs
+++ b/views/components/apartment.ejs
@@ -9,6 +9,10 @@
       <title>Apartment Detail</title>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
       <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+      <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
       <link
          rel="stylesheet"
          href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
@@ -73,7 +77,7 @@
                            <p>
                               Diện tích -
                               <i style="color: rgb(80, 51, 11)" class="bx bxs-home"></i>
-                              <label class="profile-text text-lable" for=""> <%= apartment.acreage %></label>
+                              <label class="profile-text text-lable" for=""> <%= apartment.acreage %>m&sup2</label>
                            </p>
                            <p>
                               Bãi biển - <i style="color: blue" class="bx bx-water"></i>
@@ -219,9 +223,9 @@
          apartment_save.addEventListener('click', OpenSave);
       </script>
       <script>
-         const like = document.getElementById('like');
-         like.addEventListener('click', () => {
-            const apartmentId = like.getAttribute('data-id');
+         const likeApartment = document.getElementById('like');
+         likeApartment.addEventListener('click', () => {
+            const apartmentId = likeApartment.getAttribute('data-id');
             $.ajax({
                url: `/favorite/like/${apartmentId}`,
                type: 'POST',
@@ -229,10 +233,8 @@
          });
       </script>
 
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
       <!-- Latest compiled JavaScript -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
       <script>
          function deleOption() {
             var htmlObj = $('.show-option');
