--- a/views/components/favoritelist.ejs
+++ b/views/components/favoritelist.ejs
@@ -24,7 +24,7 @@
          crossorigin="anonymous"
       />
       <script
-         src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+         src="https://code.jquery.com/jquery-3.2.1.min.js"
          integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
          crossorigin="anonymous"
       ></script>
@@ -38,12 +38,6 @@
          integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
          crossorigin="anonymous"
       ></script>
-      <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-      <script type="text/javascript">
-         jQuery(document).ready(function ($) {
-            $('.alert__success').delay(3000).fadeOut('slow');
-         });
-      </script>
    </head>
    <body>
       <%- include('../layouts/header') %>
@@ -95,15 +89,6 @@
                <%} %>
             </div>
          </div>
-         <% if (alert.length > 0) { %>
-         <div class="alert__success">
-            <i class="las la-check-circle"></i>
-            <div class="alert__content">
-               <h6>Thành Công!</h6>
-               <h7><%= alert%></h7>
-            </div>
-         </div>
-         <% } %>
       </section>
    </body>
 </html>
