--- a/views/components/profile.ejs
+++ b/views/components/profile.ejs
@@ -71,8 +71,8 @@
                         <div id="myModal" class="modal">
                            <!-- Modal content -->
                            <div class="modal--content">
-                              <span class="close">&times;</span>
-                              <h1>Change Password</h1>
+                              <span class="close">x</span>
+                              <h1>Thay đổi thông tin</h1>
                               <div class="row1">
                                  <div class="col l-6">
                                     <h3 class="profile__infor-label">Tên người dùng:</h3>
@@ -107,8 +107,8 @@
                         <div id="myModal__password" class="modal__password">
                            <!-- Modal content -->
                            <div class="modal--content2">
-                              <span class="close__password">&times;</span>
-                              <h1 style="padding-bottom: 30px">Change Contact</h1>
+                              <span class="close__password"> x</span>
+                              <h1 style="padding-bottom: 30px">Thay đổi mật khẩu</h1>
                               <div class="row2">
                                  <div class="col l-6">
                                     <h3 class="profile__infor-label">Mật khẩu cũ:</h3>
