--- a/views/admin/create.ejs
+++ b/views/admin/create.ejs
@@ -3,72 +3,78 @@
 <section class="content">
    <div class="content-header"></div>
    <div class="content__body">
-      <div class="card">
-         <div class="card-header">
-            <h4>Tạo tài khoản cho người quản lý</h4>
-         </div>
-         <div class="card-body">
-            <form action="create/user" method="post" class="row create__account">
-               <div class="form-group col l-6">
-                  <p>Email</p>
-                  <input
-                     type="email"
-                     id="email"
-                     name="email"
-                     placeholder="mail@example.com"
-                     title="Please enter a valid email"
-                     required=""
-                  />
-               </div>
-               <div class="form-group col l-6">
-                  <p>Mật khẩu</p>
-                  <input
-                     type="password"
-                     class="lock"
-                     name="password"
-                     placeholder="Mật khẩu"
-                     id="password"
-                     required=""
-                  />
-               </div>
-               <div class="form-group col l-6">
-                  <p>Tên đầy đủ</p>
-                  <input
-                     type="text"
-                     id="fullname"
-                     name="fullname"
-                     placeholder="Tên Người Dùng"
-                     title="Please enter your fullname"
-                     required=""
-                  />
-               </div>
-               <div class="form-group col l-6">
-                  <p>Nhập lại mật khẩu</p>
-                  <input
-                     type="password"
-                     class="lock"
-                     name="confirm-password"
-                     placeholder="Nhập lại mật khẩu"
-                     id="confirm-password"
-                     required=""
-                  />
-               </div>
-               <div class="form-group col l-6">
-                  <p>Số điện thoại</p>
-                  <input
-                     type="text"
-                     id="phonenumber"
-                     name="phonenumber"
-                     placeholder="Số điện thoại"
-                     title="Please enter your Phone Number"
-                     required=""
-                  />
-               </div>
+      <div class="row">
+         <div class="col-md-5">
+            <div class="card">
+               <div class="card-header"><h4>Tạo tài khoản cho người quản lý</h4></div>
+               <div class="card-body">
+                  <form action="create/user" method="post" class="create__account">
+                     <div class="form-group">
+                        <p class="text-left">Email</p>
+                        <input
+                           type="email"
+                           id="email"
+                           name="email"
+                           placeholder="mail@example.com"
+                           title="Please enter a valid email"
+                           required=""
+                           class="pl-2 rounded form-control"
+                        />
+                     </div>
+                     <div class="form-group">
+                        <p class="text-left">Mật khẩu</p>
+                        <input
+                           type="password"
+                           name="password"
+                           placeholder="Mật khẩu"
+                           id="password"
+                           required=""
+                           class="pl-2 rounded form-control lock"
+                        />
+                     </div>
+                     <div class="form-group">
+                        <p class="text-left">Tên đầy đủ</p>
+                        <input
+                           type="text"
+                           id="fullname"
+                           name="fullname"
+                           placeholder="Tên Người Dùng"
+                           title="Please enter your fullname"
+                           required=""
+                           class="pl-2 rounded form-control"
+                        />
+                     </div>
+                     <div class="form-group">
+                        <p class="text-left">Nhập lại mật khẩu</p>
+                        <input
+                           type="password"
+                           class="lock pl-2 rounded form-control"
+                           name="confirm-password"
+                           placeholder="Nhập lại mật khẩu"
+                           id="confirm-password"
+                           required=""
+                           class="pl-2 rounded form-control"
+                        />
+                     </div>
+                     <div class="form-group">
+                        <p class="text-left">Số điện thoại</p>
+                        <input
+                           type="text"
+                           id="phonenumber"
+                           name="phonenumber"
+                           placeholder="Số điện thoại"
+                           title="Please enter your Phone Number"
+                           required=""
+                           class="pl-2 rounded form-control"
+                        />
+                     </div>
 
-               <div class="form-group col l-12">
-                  <button type="submit">Xác nhận</button>
+                     <div class="form-group col l-12 text-right">
+                        <button type="submit" class="btn btn-primary rounded p-1">Xác nhận</button>
+                     </div>
+                  </form>
                </div>
-            </form>
+            </div>
          </div>
       </div>
    </div>
