--- a/views/components/apartment.ejs
+++ b/views/components/apartment.ejs
@@ -9,10 +9,11 @@
       <title>Apartment Detail</title>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
       <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-      <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
+      <script
+         src="https://code.jquery.com/jquery-3.6.1.min.js"
+         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+         crossorigin="anonymous"
+      ></script>
       <link
          rel="stylesheet"
          href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
@@ -134,7 +135,7 @@
                                     <option value="90">90%</option>
                                     <option value="vnh">Vay Ngân Hàng</option>
                                  </select>
-                                 <div class="show-option"></div>
+                                 <div id="show-option"></div>
                               </div>
                               <div class="center">
                                  <button type="submit" class="btn-success">Kiểm Tra</button>
@@ -215,14 +216,6 @@
          }
       </script>
       <script>
-         var apartment_save = document.querySelector('.btn-bxs-heart');
-
-         function OpenSave() {
-            apartment_save.classList.add('open');
-         }
-         apartment_save.addEventListener('click', OpenSave);
-      </script>
-      <script>
          const likeApartment = document.getElementById('like');
          likeApartment.addEventListener('click', () => {
             const apartmentId = likeApartment.getAttribute('data-id');
@@ -230,25 +223,22 @@
                url: `/favorite/like/${apartmentId}`,
                type: 'POST',
             });
+            likeApartment.classList.add('open');
          });
       </script>
 
       <!-- Latest compiled JavaScript -->
 
       <script>
-         function deleOption() {
-            var htmlObj = $('.show-option');
-            htmlObj.innerHTML = '';
-         }
-         const $ = document.querySelector.bind(document);
          function yearVnh(value) {
+            var htmlObj = document.getElementById('show-option');
+            var vay = 'vnh';
             if (value) {
-               deleOption();
+               htmlObj.innerHTML = '';
             }
-            if (value == 'vnh') {
-               var htmlObj = $('.show-option');
+            console.log(value);
+            if (value == vay) {
                htmlObj.innerHTML =
-                  htmlObj.innerHTML +
                   " <select type='number' name='yearVnh'> <option value='' disabled hidden>0</option> <option value='5'>5 năm</option> <option value='6'>6 năm</option> <option value='7'>7 năm</option> <option value='8'>8 năm</option> <option value='9'>9 năm</option> <option value='10' selected>10 năm</option> <option value='11'>11 năm</option> <option value='12'>12 năm</option> <option value='13'>13 năm</option> <option value='14'>14 năm</option> <option value='15'>15 năm</option> </select> ";
             }
          }
