--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -18,6 +18,12 @@
 html {
    font-size: 100%;
 }
+.hello__user {
+   text-align: center;
+   font-size: 18px;
+   font-weight: 500;
+   margin-right: 20px;
+}
 
 .sidebar {
    width: 280px;
