--- a/views/admin.layouts/navbar.ejs
+++ b/views/admin.layouts/navbar.ejs
@@ -6,5 +6,9 @@
          </label>
          <a class="home__page" href="/"> Real Estate Resort Analysis Support System </a>
       </h2>
+      <div class="hello__user">
+         Xin chào<br />
+         <%= user.fullname %>
+      </div>
    </div>
 </header>
